--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --Blue: #3EC2CD;
+    --Blue: #2A8EFB;
     --DarkBlue:#298EFB;
     --orange: #F97316;
     --secondary-color: #6c757d;
