--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -129,3 +129,15 @@ body {
     text-decoration: none;
 }
 
+.blue-button{
+    background-color: var(--Blue)!important;
+    color: white!important;
+    border-radius: 8px!important;
+    font-size: 0.95rem!important;
+    font-weight: 600!important;
+    width: 170px!important;
+}
+.blue-button:hover{
+    background-color: var(--Blue)!important;
+}
+
