--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -140,6 +140,18 @@ body {
 .blue-button:hover{
     background-color: var(--Blue)!important;
 }
+/* Chrome, Safari, Edge */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 
 
 
