--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -432,6 +432,56 @@ input[type=number] {
   justify-content: space-between!important;
 }
 
+.dot-typing {
+  position: relative;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #9ca3af;
+  color: #9ca3af;
+  animation: dotTyping 1.5s infinite linear;
+}
+
+.dot-typing::before,
+.dot-typing::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #9ca3af;
+  animation: dotTyping 1.5s infinite linear;
+}
+
+.dot-typing::before {
+  left: -10px;
+  animation-delay: 0s;
+}
+
+.dot-typing {
+  animation-delay: 0.2s;
+}
+
+.dot-typing::after {
+  left: 10px;
+  animation-delay: 0.4s;
+}
+
+@keyframes dotTyping {
+  0% {
+    opacity: 0.2;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.2;
+  }
+}
+
 
 /* Disable hover / glow effect on touch devices */
 @media (hover: none) and (pointer: coarse) {
